--- a/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
+++ b/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
@@ -108,7 +108,7 @@
                     <div class="form-group kt-form__group row">
                         <div class="col-lg-6 kt-margin-bottom-20-mobile">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                            <mat-form-field class="w-full">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Account Status<strong class="matMandatory">*</strong></mat-label>
                                 <mat-select formControlName="AccountStatus">
                                     <!-- <mat-option *ngFor="let lov of vendorLov" [value]="lov.Value">
@@ -120,7 +120,7 @@
                         </div>
                         <div class="col-lg-6 kt-margin-bottom-20-mobile">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                            <mat-form-field class="w-full">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Export Format<strong class="matMandatory">*</strong></mat-label>
                                 <mat-select formControlName="ExportFormat">
                                     <!-- <mat-option *ngFor="let lov of vendorLov" [value]="lov.Value">
