--- a/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
+++ b/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
@@ -13,7 +13,7 @@
         <div class="col-lg-3 col-sm-12">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
             <mat-label class="customMatLabel">Zone</mat-label>
-            <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
+            <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone || viewOnly">
                 <mat-option [value]="SelectedZones?.ZoneId">
                     {{SelectedZones?.ZoneName}}
                 </mat-option>
@@ -22,7 +22,7 @@
 
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="!single_zone">
             <mat-label class="customMatLabel">Zone</mat-label>
-            <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
+            <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone || viewOnly"
                         (selectionChange)="changeZone($event)">
                 <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
                             [disabled]="disable_zone">
@@ -39,7 +39,7 @@
           <div>
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                 <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-                <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch"
+                <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch || viewOnly"
                             (selectionChange)="changeBranch($event)"
                             *ngIf="!single_branch">
                     <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
@@ -47,7 +47,7 @@
                         {{branch?.Name}}
                     </mat-option>
                 </mat-select>
-                <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch"
+                <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch || viewOnly"
                             *ngIf="single_branch">
                     <mat-option [value]="SelectedBranches?.BranchCode"
                     >
