--- a/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
+++ b/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
@@ -229,7 +229,7 @@
 
 
     <!-- Search end -->
-    <div class="mat-table__wrapper overflow-scroll" [style.height]="gridHeight">
+    <div class="mat-table__wrapper border shadow-xs rounded-sm bg-gray-50 overflow-scroll" [style.height]="gridHeight">
 
         <mat-table class="lmat-elevation-z8"
                    #table
