--- a/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
+++ b/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
@@ -2,7 +2,7 @@
     <div class="kt-portlet">
         <div class="kt-portlet__head kt-portlet__head__custom" id="list-header" style="display: flex;flex-direction: row;justify-content: space-between; margin-bottom: 10px;">
             <div class="kt-portlet__head-label">
-                <h3 class="kt-portlet__head-title">Bifurcation of OS balances LC</h3>
+                <h3 class="heading">Bifurcation of OS balances LC</h3>
             </div>
             <!-- <span (click)="close(0)"><mat-icon>close</mat-icon></span> -->
            
