List Geo Fencing styling

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -307,3 +307,14 @@ button:focus {
   }
 }
 }
+.example-table-container{
+.mat-table{
+.mat-header-row {
+  background-color: #01671B;
+  color: white;
+  th{
+    color: white;
+  }
+}
+}
+}
