--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -8,7 +8,7 @@
         overflow-x-hidden
         bg-card
         dark:bg-transparent
-        
+
         reports
     "
 >
@@ -63,7 +63,7 @@
     </div>
 
     <div class="col-lg-12 mt-2 row ml-1 justify-content-center text-center bg-gray-50  py-4">
-        
+
         <div class="col-lg-4 col-sm-12">
             <!-- <mat-accordion>
                 <mat-expansion-panel hideToggle>
@@ -94,15 +94,17 @@
             <mat-card (click) = "earlyWarningReports()" class="cursor-pointer mx-4" id="llcInquiryText" ><p  class="font-bold text-lg">Early warning reports for MCOs</p></mat-card>
         </div>
 
+
+
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click) = "dueInstallments()" class="cursor-pointer mx-4" id="llcInquiryText" ><p  class="font-bold text-lg">Due Installments</p></mat-card>
+            <mat-card (click) = "loanAmountConvertToDefault()" class="cursor-pointer mx-4" id="llcInquiryText"><p  class="font-bold text-lg">Loan amounts likely to be converted into default</p></mat-card>
         </div>
 
     </div>
 
     <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
-      <div class="col-lg-4 col-sm-12">
-        <mat-card (click) = "loanAmountConvertToDefault()" class="cursor-pointer mx-4" id="llcInquiryText"><p  class="font-bold text-lg">Loan amounts likely to be converted into default</p></mat-card>
-      </div>
+<!--        <div class="col-lg-4 col-sm-12">-->
+<!--            <mat-card (click) = "dueInstallments()" class="cursor-pointer mx-4" id="llcInquiryText" ><p  class="font-bold text-lg">Due Installments</p></mat-card>-->
+<!--        </div>-->
   </div>
 </div>
