--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -1,4 +1,5 @@
-<div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+<div
+    class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
 
 
     <!-- Header -->
@@ -9,18 +10,20 @@
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
-                <button class=" mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                <button class=" mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                        type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                        aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2">filter_list</mat-icon>
+                    Advance Filter
                 </button>
-              </p>
+            </p>
         </div>
     </div>
 
     <!-- Header -->
 
 
-
-      <div class="collapse" id="collapseExample">
+    <div class="collapse" id="collapseExample">
         <div class="card card-body">
             <div [formGroup]="customerSearch" class="mt-4">
 
@@ -30,17 +33,21 @@
                         <div class="col-lg-3 col-sm-12">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
-                                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
+                                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline"
+                                                *ngIf="single_zone">
                                     <mat-label class="customMatLabel">Zone</mat-label>
-                                    <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone">
+                                    <mat-select [(ngModel)]="selected_z" formControlName="Zone"
+                                                [disabled]="disable_zone">
                                         <mat-option [value]="SelectedZones?.ZoneId">
                                             {{SelectedZones?.ZoneName}}
                                         </mat-option>
                                     </mat-select>
                                 </mat-form-field>
-                                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="!single_zone">
+                                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline"
+                                                *ngIf="!single_zone">
                                     <mat-label class="customMatLabel">Zone</mat-label>
-                                    <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone"
+                                    <mat-select [(ngModel)]="selected_z" formControlName="Zone"
+                                                [disabled]="disable_zone"
                                                 (selectionChange)="changeZone($event)">
                                         <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
                                                     [disabled]="disable_zone">
@@ -56,15 +63,18 @@
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 ">
 
                                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                    <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-                                    <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
+                                    <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong>
+                                    </mat-label>
+                                    <mat-select [(ngModel)]="selected_b" formControlName="Branch"
+                                                [disabled]="disable_branch"
                                                 *ngIf="!single_branch">
                                         <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
                                         >
                                             {{branch?.Name}}
                                         </mat-option>
                                     </mat-select>
-                                    <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
+                                    <mat-select [(ngModel)]="selected_b" formControlName="Branch"
+                                                [disabled]="disable_branch"
                                                 *ngIf="single_branch">
                                         <mat-option [value]="SelectedBranches?.BranchCode"
                                         >
@@ -95,7 +105,8 @@
                                            autocomplete="off"
                                            [mask]="maskEnums.cnic">
                                     <!--      <mat-error *ngIf="hasError('Cnic', 'required')">Cnic <strong>required</strong></mat-error>-->
-                                    <mat-error *ngIf="hasError('Cnic', 'pattern')"><strong>{{errors.cnic}}</strong></mat-error>
+                                    <mat-error *ngIf="hasError('Cnic', 'pattern')"><strong>{{errors.cnic}}</strong>
+                                    </mat-error>
                                 </mat-form-field>
                             </div>
                         </div>
@@ -108,14 +119,15 @@
 
                                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                     <mat-label>Father Name</mat-label>
-                                    <input matInput formControlName="FatherName" placeholder="Enter Father Name" maxlength="100"
+                                    <input matInput formControlName="FatherName" placeholder="Enter Father Name"
+                                           maxlength="100"
                                            autocomplete="off"
                                            appAlphabetOnly>
                                     <!--   <mat-error *ngIf="hasError('FatherName', 'required')">FatherName<strong>required</strong></mat-error>-->
                                 </mat-form-field>
                             </div>
                         </div>
-                        <!-- <div class="col-lg-3 col-sm-12">
+                        <div class="col-lg-3 col-sm-12">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" *ngIf="CustomerStatusLov">
                                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                     <mat-label>Select Customer Status</mat-label>
@@ -130,11 +142,14 @@
 
                                 </mat-form-field>
                             </div>
-                        </div> -->
+                        </div>
                         <div class="col-lg-3 col-sm-12">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
-                                <button  data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" class=" mt-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" mat-raised-button
+                                <button data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                                        aria-expanded="false"
+                                        class=" mt-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                                        mat-raised-button
                                         type="button"
                                         (click)="searchCustomer()">
                                     <mat-icon class="mr-2">search</mat-icon>
@@ -151,13 +166,7 @@
 
             </div>
         </div>
-      </div>
-
-
-
-
-
-
+    </div>
 
 
     <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50 overflow-scroll " style="flex-direction: column;">
@@ -203,7 +212,9 @@
                     <mat-cell *matCellDef="let customer">
                         <button *ngIf="!isDialog" mat-icon-button color="primary" (click)="editCustomer(customer)">
                             <!--<mat-icon style="margin-left: 5px;" title="Edit land">edit</mat-icon>   loggedInUserDetails.User.UserId        -->
-                            <mat-icon class="text-green-500" style="margin-left: 2px; color: #01671b !important;" title="View Customer">visibility</mat-icon>
+                            <mat-icon class="text-green-500" style="margin-left: 2px; color: #01671b !important;"
+                                      title="View Customer">visibility
+                            </mat-icon>
                         </button>
                     </mat-cell>
                 </ng-container>
