create customer styling

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -321,3 +321,10 @@ button:focus {
 }
 }
 }
+.sidenav-section{
+  width: 280px !important;
+  color: white;
+}
+.mat-form-field-subscript-wrapper{
+  padding: 0px !important;
+}
