--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -16,14 +16,11 @@
                     </mat-select>
                 </mat-form-field>
             </div>
-        </div>
-
-        <div class="row">
             <div class="col-lg-6 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mb-2">
-                        <button (click)="find()"  mat-flat-button [color]="'primary'">
+                        <button class="mt-2" (click)="find()"  mat-flat-button [color]="'primary'">
                             <mat-icon class="mr-2">search</mat-icon> Search
                         </button>
                     </div>
@@ -31,6 +28,7 @@
                 </div>
             </div>
         </div>
+
 
 
         </div>
